# zmk-keyboard-torabo-tsuki-lp

./: build.yaml
config/: keymap.keymap  (+1 more)
src/battery_history/: CMakeLists.txt  Kconfig  LICENSE  README.md  test.py  west.yml
src/battery_history/dts/behaviors/: battery_history_request.dtsi
src/battery_history/dts/bindings/behaviors/: zmk,behavior-battery-history-request.yaml
src/battery_history/include/zmk/battery_history/: battery_history.h
src/battery_history/include/zmk/battery_history/events/: battery_history_entry_event.h
src/battery_history/proto/zmk/battery_history/: battery_history.options  battery_history.proto
src/battery_history/src/battery_history/: battery_history.c  battery_history_handler.c
src/battery_history/src/behaviors/: behavior_battery_history_request.c
src/battery_history/tests/: test.dtsi
src/battery_history/tests/battery-history/: events.patterns  keycode_events.snapshot  native_posix_64.conf  native_posix_64.keymap
src/battery_history/tests/split-config/: build.yml
src/battery_history/tests/split-config/config/: split_xiao.conf  split_xiao.keymap  west.yml
src/battery_history/tests/zmk-config/: build.yaml
src/battery_history/tests/zmk-config/config/: my_awesome_keyboard.conf  west.yml
src/battery_history/web/: .gitignore  README.md  buf.gen.yaml  index.html  jest.config.ts  package-lock.json  package.json  vite.config.ts
src/battery_history/web/src/: App.css  App.tsx
src/battery_history/web/src/components/: BatteryHistoryChart.css  BatteryHistoryChart.tsx  BatteryHistorySection.css  BatteryHistorySection.tsx  BatteryIndicator.css  BatteryIndicator.tsx
src/battery_history/web/test/: App.spec.tsx  BatteryHistorySection.spec.tsx  setup.ts
src/battery_history/west/: west-test-standalone.yml  west-test.yml
src/battery_history/west/west-dependency/: west-dependency.yml  west-test-dependency.yml
src/battery_history/zephyr/: module.yml
(+20 files in other folders)
